<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.About">

    <ImageView
        android:id="@+id/aboutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutImage"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/aboutTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:lineSpacingExtra="5sp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/aboutTxt"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionTxt"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/versionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:padding="8dp"
        android:text="@string/version_1_0_0"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/contactTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="16dp"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTxt"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/contactTxtV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:lineSpacingExtra="5sp"
        android:padding="8dp"
        android:text="@string/contactUsTxt"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactTxt"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/emailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactTxtV"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:layout_margin="8dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/emailImage"
        app:layout_constraintTop_toBottomOf="@+id/contactTxtV"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>